<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/v4"
        android:layout_gravity="start"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text5"
android:layout_gravity="center_horizontal"
        android:textColor="@color/background"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text2"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text3"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_marginBottom="40dp" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/text4"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>