<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://android.com"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/arrow"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:contentDescription="Назад"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text6"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/white_rounded_block"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tvSliderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text7"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/Slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="30000"
                android:valueTo="100000"
                android:stepSize="1000"
                android:value="30000"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text11"
                    android:textColor="#757575"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="до 100 000"
                    android:layout_alignParentEnd="true"
                    android:textColor="#757575"
                    android:textSize="12sp"/>
            </RelativeLayout>
        </LinearLayout>


        <EditText
            android:id="@+id/etTerm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text8"
            android:inputType="number"
            android:background="@drawable/white_rounded_block"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:layout_marginBottom="32dp"/>
        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/text9"
            android:textSize="24sp"
            android:backgroundTint="@color/darkGreen"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/etPlatezh"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text10"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_rounded_block"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
           android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>